initializing separate pages

--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant Page</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <button id="home">Home</button>
+        <button id="menu">Menu</button>
+        <button id="about">About</button>
+      </nav>
+    </header>
+    <div id="content">
+      <h1>Rawmen</h1>
+      <p>The best in the west.</p>
+      <p>Authentic japanese cuisine.</p>
+    </div>
+  </body>
 </html>
